objects/DaScoopComposer__Conversation__c.object
<CustomObject>
    <fields>
        <fullName>DaScoopComposer__Activity_Id__c</fullName>
        <externalId>true</externalId>
        <label>Activity Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Composite_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Recording Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Conversation_Type__c</fullName>
        <label>Recording Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>zoom_meeting</fullName>
                    <default>true</default>
                    <label>Zoom Meeting</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Duration_In_Seconds__c</fullName>
        <label>Duration in seconds</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Started_At__c</fullName>
        <label>Conversation Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Vendor_Id__c</fullName>
        <label>Recording Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Conversation</label>
    <listViews>
        <fullName>DaScoopComposer__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Topic</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conversations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>